--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,5 +1,5 @@
 [versions]
-agp = "8.5.2"
+agp = "8.4.0"
 kotlin = "1.9.0"
 coreKtx = "1.13.1"
 junit = "4.13.2"
@@ -7,14 +7,18 @@ junitVersion = "1.2.1"
 espressoCore = "3.6.1"
 lifecycleRuntimeKtx = "2.8.4"
 activityCompose = "1.9.1"
-composeBom = "2024.08.00"
+composeBom = "2023.08.00"
+androidTools = "31.5.2"
+appcompat = "1.6.1"
+material = "1.10.0"
 retrofit="2.11.0"
 glide="4.16.0"
 hilt="2.52"
 sentry = "4.11.0"
 ktlint = "12.1.1"
-font="1.6.8"
+font="1.7.1"
 detekt = "1.23.3"
+jetbrainsKotlinJvm = "1.9.0"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -37,6 +41,11 @@ hilt = { group = "com.google.dagger", name = "hilt-android", version.ref="hilt"}
 hilt-compiler = { group="com.google.dagger", name="hilt-compiler", version.ref="hilt"}
 hilt-test = { group = "com.google.dagger", name = "hilt-android-testing", version.ref="hilt"}
 androidx-ui-font = { group = "androidx.compose.ui", name = "ui-text-google-fonts", version.ref="font"}
+android-gradlePlugin = { group = "com.android.tools.build", name = "gradle", version.ref = "agp"}
+kotlin-gradlePlugin = { group = "org.jetbrains.kotlin", name = "kotlin-gradle-plugin", version.ref = "kotlin" }
+android-tools-common = { group = "com.android.tools", name = "common", version.ref = "androidTools" }
+androidx-appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "appcompat" }
+material = { group = "com.google.android.material", name = "material", version.ref = "material" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
@@ -46,3 +55,7 @@ kapt = { id = "org.jetbrains.kotlin.kapt", version.ref= "kotlin"}
 sentry = { id = "io.sentry.android.gradle", version.ref = "sentry"}
 ktlint = { id = "org.jlleitschuh.gradle.ktlint", version.ref = "ktlint"}
 detetkt = { id = "io.gitlab.arturbosch.detekt", version.ref = "detekt"}
+ucb-android-library = {id="ucb.android.library", version="unspecified"}
+jetbrains-kotlin-jvm = { id = "org.jetbrains.kotlin.jvm", version.ref = "jetbrainsKotlinJvm" }
+android-library = { id = "com.android.library", version.ref = "agp" }
+ucb-jvm-library = { id = "com.jvm.library", version = "unspecified"}
