--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,17 +13,26 @@
         android:theme="@style/Theme.MyApplication"
         tools:targetApi="31">
         <activity
+            android:name=".login.LoginActivity"
+            android:exported="true"
+            android:label="@string/title_activity_login"
+            android:theme="@style/Theme.MyApplication">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
             android:name=".Counter"
             android:exported="true"
             android:label="@string/title_activity_counter"
-            android:theme="@style/Theme.MyApplication">
-        </activity>
+            android:theme="@style/Theme.MyApplication"></activity>
         <activity
             android:name=".PracticingActivity"
             android:exported="true"
             android:label="@string/title_activity_practicing"
-            android:theme="@style/Theme.MyApplication">
-        </activity>
+            android:theme="@style/Theme.MyApplication"></activity>
         <activity
             android:name=".BookActivity"
             android:exported="true"
@@ -39,14 +48,12 @@
             android:name=".ChallengeActivity"
             android:exported="true"
             android:label="@string/title_activity_challenge"
-            android:theme="@style/Theme.MyApplication">
-        </activity>
+            android:theme="@style/Theme.MyApplication"></activity>
         <activity
             android:name=".ScaffoldActivity"
             android:exported="true"
             android:label="@string/title_activity_scaffold"
-            android:theme="@style/Theme.MyApplication">
-        </activity>
+            android:theme="@style/Theme.MyApplication"></activity>
         <activity
             android:name=".BeautyActivity"
             android:exported="true"
